# pylibseq

./: .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile.sphinx  PKG-INFO  README.rst  conf.py  conf.py.in  config.h.in  configure  configure.ac  index.html  index.md  index.rst  readthedocs.yml  requirements.txt  requirements.txt.in  setup.cfg  setup.py  setup.py.in  test2.py
.circleci/: config.yml  config.yml.in
check_deps/: Makefile  test.cc
doc/: Makefile  Zreferences.bib  conf.py  conf.py.in  environment.yml  extending.rst  index.rst  lifetimes.rst  overview.ipynb  overview.rst
docs/: Makefile  Zreferences.bib  conf.py  conf.py.in  environment.yml  index.rst  references.bib
libsequence/: CMakeLists.txt  __init__.py  __init__.py.in  __main__.py  _tskit_tools.py  citations.py  extensions.cpp  extensions.pxd  extensions.pyx  fst.cpp  fst.pxd  fst.pyx  msprime.py  msstats_cli.py  parallel.pxd  parallel.pyx  polysitevector.pxd  polytable.cpp  polytable.pxd  polytable.pyx  summstats.cpp  summstats.pxd  summstats.pyx  windows.cpp  windows.pxd  windows.py  windows.pyx
libsequence/console/: citations.py  msstats_cli.py
libsequence/src/: _libsequence.cc  fst.cc  omega_max.cc  parallel.cc  polytable.cc  summstats.cc  variant_matrix.cc  vector_capsules.cc  windows_cpp.cc
md/: index.md
pyseq/: polysitevector.pxd  polytable.pxd  polytable.pyx
tests/: CMakeLists.txt  allele_count_matrix.cc  cpptests.cc  test_AlleleCountMatrix.py  test_StateCounter.py  test_VariantMatrix.py  test_external_modules.py  test_fst.py  test_polytable.py  test_summstats.py  test_symbol_visibility.py  test_windows.py  (+1 more)
(+105 files in other folders)
